# pyg-assessment

interview-assessment-master/: .env.example  .gitignore  AssessmentInstructions.md  Dockerfile  README.md  app.py  app_cron  create_coin_table.sql  create_portfolio_table.sql  pyproject.toml
interview-assessment-master/.github/: settings.yml
interview-assessment-master/.github/workflows/: setup-repo-branches.yml
interview-assessment-master/docs/source/: app.rst  conf.py  index.rst
